Fix home animation mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -518,6 +518,7 @@
     height: var(--size);
     pointer-events: none;
     z-index: 2;
+    will-change: transform;
   }
 
   .coin-img {
